--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/salask24/employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "express": "^4.17.1",
     "inquirer": "^8.1.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5"
   }
 }
